[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "esrgan"
version = "0.2.0"
description = "Implementation of paper `ESRGAN: Enhanced Super-Resolution Generative Adversarial Networks`"
license = "CC-BY-NC-ND-4.0"
authors = [
  "Yauheni Kachan <yauheni.kachan@leverx.com>"
]
readme = "README.md"
repository = "https://github.com/leverxgroup/esrgan"
documentation = "https://esrgan.readthedocs.io/"
keywords = [
  "computer vision",
  "super-resolution",
  "generative adversarial networks",
  "esrgan",
  "pytorch",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "License :: Free for non-commercial use",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[tool.poetry.scripts]
esrgan-process-images = 'esrgan.utils.scripts.process_images:main'

[tool.poetry.dependencies]
python = "^3.7"

catalyst = { version = "~21.12", extras = ["cv", "albu"] }
jpeg4py = "^0.1.4"
numpy = "^1.19.1"
piq = "~0.6.0"
torch = "~1.8.1"
torchvision = "~0.9.1"

[tool.poetry.dev-dependencies]
darglint = "^1.8"
doc8 = "^0.8"
flake8 = "^3.8"
flake8-broken-line = "^0.3"
flake8-comprehensions = "^3.5"
flake8-debugger = "^4.0"
flake8-docstrings = "^1.6"
flake8-eradicate = "^1.0"
flake8-isort = "^4.0"
flake8-quotes = "^3.2"
flake8-rst-docstrings = "^0.2.3"
isort = "^5.8"
mypy = "^0.910"
